--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ header {
 }
 
 .logo {
-  width: 14vw;
+  width: 30vw;
 }
 
 h1 {
@@ -68,8 +68,11 @@ p {
   margin: 4vh
 }
 .CodeINBlogs-logo{
-  border-right: 2px solid #fffdffa0;
-  padding-right: 2%;
+  border-right: 2px solid rgba(82, 52, 174, 0.454);
+  padding-right: 0.5%;
+}
+.AstraCode-logo{
+  padding-left: 0.5%;
 }
 main {
   display: flex;
